# cpp-web-scraper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
HTTPDownloader/: CMakeLists.txt  FindTidy.cmake  HTTPDownloader.cpp
modules/: FindCURLpp.cmake  Findglib.cmake  Findglibmm.cmake  Findlibxml++.cmake  Findsigc++.cmake
